crates/keron-lang/tests/corpus/errors/parse/pattern_bare_struct_name.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: bare pattern bindings must start with a lowercase letter or `_`
  --> 2:3
  |
2 |   Color => "color",
  |   ^
